--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "necessary"
-version = "0.2.0"
+version = "0.2.1"
 description = "Python package to enforce optional dependencies"
 authors = [
     {name = "Luca Soldaini", email = "luca@soldaini.net" }
@@ -63,6 +63,12 @@ profile = "black"
 line_length = 79
 multi_line_output = 3
 
+[tool.autopep8]
+max_line_length = 79
+in-place = true
+recursive = true
+aggressive = 3
+
 [tool.mypy]
 python_version = 3.8
 ignore_missing_imports = true
@@ -75,7 +81,7 @@ strict_optional = false
 [tool.flake8]
 per-file-ignores = [
     '__init__.py:F401',
-    '*.pyi:E302,E305',
+    '*.pyi:E301,E302,E305',
 ]
 
 # this works in setuptools >= 61.0.0
