--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.8"
 dependencies = [
     "packaging>=22.0",
     "typing_extensions>=4.3.0",
+    "requirements-parser>=0.5.0"
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
