--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,4 +95,13 @@ strict_optional = false
 per-file-ignores = [
     '__init__.py:F401',
     '*.pyi:E301,E302,E305',
+    '*/__init__.py:F401',
+    '*/**/**/__init__.py:F401,E501',
+    '*/**/*.pyi:Y027,Y022,Y037,Y020,E301,E305,E302'
+]
+exclude = [
+    '.venv',
+    '.git',
+    '__pycache__',
+    '.mypy_cache',
 ]
