--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "necessary"
-version = "0.3.3"
+version = "0.4.0"
 description = "Python package to enforce optional dependencies"
 authors = [
     {name = "Luca Soldaini", email = "luca@soldaini.net" }
@@ -11,6 +11,7 @@ requires-python = ">=3.8"
 dependencies = [
     "packaging>=22.0",
     "typing_extensions>=4.3.0",
+    "requirements-parser>=0.5.0"
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -94,4 +95,13 @@ strict_optional = false
 per-file-ignores = [
     '__init__.py:F401',
     '*.pyi:E301,E302,E305',
+    '*/__init__.py:F401',
+    '*/**/**/__init__.py:F401,E501',
+    '*/**/*.pyi:Y027,Y022,Y037,Y020,E301,E305,E302'
+]
+exclude = [
+    '.venv',
+    '.git',
+    '__pycache__',
+    '.mypy_cache',
 ]
