--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,16 +29,16 @@ jobs:
         task:
           - name: Style
             run: |
-              isort --check .
-              black -l 79 --check .
+              isort -v --check .
+              black -v --check .
 
           - name: Lint
             run: |
-              flake8 . --exclude .venv
+              flake8 . --exclude .venv -v
 
           - name: Type check
             run: |
-              mypy .
+              mypy -v .
 
           - name: Test
             run: |
