adding dev deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
         if: steps.virtualenv-cache.outputs.cache-hit == 'true'
         run: |
           . .venv/bin/activate
-          pip install --no-deps -e .
+          pip install --no-deps -e .[dev]
 
       - name: Show environment info
         run: |
