--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,20 +29,20 @@ jobs:
         task:
           - name: Style
             run: |
-              isort -v --check .
-              black -v --check .
+              echo "=====isort=====" && isort -v --check .
+              echo "=====black=====" && black -v --check .
 
           - name: Lint
             run: |
-              flake8 . --exclude .venv -v
+              echo "=====flake8=====" && flake8 . --exclude .venv -v
 
           - name: Type check
             run: |
-              mypy -v .
+              echo "=====mypy=====" && mypy -v .
 
           - name: Test
             run: |
-              pytest -v --color=yes tests/
+              echo "=====pytest=====" && pytest -v --color=yes tests/
 
     steps:
       - uses: actions/checkout@v3
@@ -87,7 +87,7 @@ jobs:
         if: steps.virtualenv-cache.outputs.cache-hit == 'true'
         run: |
           . .venv/bin/activate
-          pip install --no-deps -e .[dev]
+          pip install --no-deps -e .
 
       - name: Show environment info
         run: |
